# VelvetOptimizer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  MIGRATION.md  QUICK-FIX.md  README.md  SETUP.md  WORKING-SETUP.md  setup-env.cmd  setup-env.ps1  setup-msvc-path-manual.md  setup-msvc-path.ps1  setup-windows-sdk.ps1
crates/vesper-app/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json
crates/vesper-app/capabilities/: default.json
crates/vesper-app/src/: App.tsx  commands.rs  main.rs  vesper.config.json
crates/vesper-app/src/components/reactbits/: GradientText.tsx  SpotlightCard.tsx
crates/vesper-cli/: Cargo.toml
crates/vesper-cli/src/: benchmark.rs  cache.rs  generate.rs  main.rs  tch_model.rs  tch_train.rs  tokenizer.rs  train.rs
crates/vesper-core/: Cargo.toml
crates/vesper-core/src/: attention.rs  config.rs  dataset_cache.rs  era.rs  flylora.rs  lib.rs  model.rs  moe.rs
crates/vesper-metacog/: Cargo.toml
crates/vesper-metacog/src/: lib.rs  meta_head.rs  regulator.rs
crates/vesper-optimizer/: Cargo.toml  build.rs
crates/vesper-optimizer/src/: lib.rs  velvet.rs
crates/vesper-optimizer/src/cuda/: kernels.cu  mod.rs  velvet.h
crates/vesper-training/: Cargo.toml
crates/vesper-training/src/: auto_scale.rs  dataset.rs  lib.rs  trainer.rs
docs/: APPLICATION_GUIDE.md  ARCHITECTURE.md  NVIDIA_INCEPTION_APPLICATION.md  NVIDIA_INCEPTION_PITCH.md  VELVET_ADAMW_CONSISTENCY.md
examples/: benchmark_complete.rs  inference.rs  train_basic.rs
python/: generate.py  requirements.txt  setup.py  train.py
python/vesper/: __init__.py  config.py  data.py  model.py  optimizer.py
python/vesper/kernels/: __init__.py  era_triton.py  fused_ce.py  velvet_cuda.py  velvet_triton.py
scripts/: download_fineweb.py  plot_benchmark.py  plot_training.py  vastai_setup.sh
velvet_src/: LICENSE  README.md  pyproject.toml  setup.py
velvet_src/include/suca/ml/: cuda_ops.h  cuda_utils.h  tensor.h  velvet_cuda.cuh  velvet_gpu_optimizer.h
velvet_src/python/: __init__.py  velvet_optimizer.py
velvet_src/python/csrc/: bindings.cpp  velvet_extension.cpp
velvet_src/src/: cuda_mem.cu  tensor.cpp  velvet_cuda.cu  velvet_gpu_optimizer.cu
