[workspace]
resolver = "2"
members = [
    "crates/vesper-core",
    "crates/vesper-optimizer",
    "crates/vesper-metacog",
    "crates/vesper-training",
    "crates/vesper-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Vesper House"]
license = "MIT"
repository = "https://github.com/thevesperhouse-hub/VesperAI"

[workspace.dependencies]
# Candle ML framework (erikbuehler fork with CUDA 12.8 fixes)
candle-core = { git = "https://github.com/EricLBuehler/candle.git", rev = "175926c9", features = ["cuda"] }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", rev = "175926c9", features = ["cuda"] }
candle-transformers = { git = "https://github.com/EricLBuehler/candle.git", rev = "175926c9", features = ["cuda"] }

# mistral.rs for optimized inference
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }

# CUDA bindings
cudarc = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI & UI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Tauri V2
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0" }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Math
rand = "0.8"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[patch.crates-io]
bindgen_cuda = { git = "https://github.com/guoqingbao/bindgen_cuda.git" }
