[package]
name = "vesper-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde.workspace = true
serde_json.workspace = true

vesper-core = { path = "../vesper-core" }
vesper-optimizer = { path = "../vesper-optimizer" }
vesper-training = { path = "../vesper-training" }
vesper-metacog = { path = "../vesper-metacog" }

candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub = "0.3"
tokio.workspace = true
anyhow.workspace = true
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2.1"
dirs = "5.0"
tokenizers = "0.15"
chrono = "0.4"
prost = "0.12"
byteorder = "1.5"
rand.workspace = true

[build-dependencies]
tauri-build.workspace = true
