[package]
name = "vesper-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
cudarc.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = ["cuda"]
cuda = []
