[package]
name = "vesper-training"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
vesper-core = { path = "../vesper-core" }
vesper-optimizer = { path = "../vesper-optimizer" }
vesper-metacog = { path = "../vesper-metacog" }

tokenizers = "0.15"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true

indicatif.workspace = true
console.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
